# koda

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  install.sh  koda.code-workspace  koda.spec  pyproject.toml  renovate.json
.cursor/rules/: coding-guidelines.mdc  development-workflow.mdc
.github/: dependabot.yml
.github/workflows/: build-release.yml  ci.yaml  ci.yml  prepare-release.yml  pullfrog.yml  release.yml  shellcheck.yml  tag-release.yml  validation.yml
.zed/: debug.json
docker/sandbox/: Dockerfile
kit/: README.md
kit/koda/: spec.yaml
kit/koda/files/home/.koda/: config.json
scripts/: release.sh
src/agents/: __init__.py
src/agents/cli/: __init__.py  main.py
src/agents/config/: settings.py
src/agents/core/: __init__.py  agent.py  message.py
src/agents/observability/: __init__.py  base.py  decorators.py
src/agents/observability/backends/: braintrust.py  langfuse.py  noop.py
src/agents/providers/: __init__.py  base.py
src/agents/providers/anthropic/: __init__.py
src/agents/providers/openai/: __init__.py  client.py
src/agents/utils/: __init__.py  exceptions.py
src/koda/agents/: __init__.py  agent.py
src/koda/cli/: main.py
src/koda/config/: __init__.py  settings.py
src/koda/core/: __init__.py  agent.py  message.py
src/koda/observability/: __init__.py  base.py  decorators.py  langfuse_observer.py
src/koda/providers/: __init__.py  adapter.py  base.py  events.py  registry.py
src/koda/providers/openai/: __init__.py  adapter.py  client.py
src/koda/tools/: __init__.py  base.py  filesystem.py  registry.py  schema.py  utils.py
src/koda/utils/: __init__.py  exceptions.py
tests/: __init__.py  conftest.py  openai_adapter_tool_message_test.py  provider_contract_test.py
