[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project]
name = "koda"
version = "0.1.0"
description = "KODA; a coding agent toolkit, CLI and extensible agent framework."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai~=2.14.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "typer~=0.21.0",
]
[project.scripts]
koda = "koda.cli.main:main"

[dependency-groups]
dev = [
    "pre-commit~=4.5.0",
    "pytest~=9.0.1",
    "ruff~=0.14.7",
    "ty~=0.0.1a29",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security rules)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["koda"]

[tool.ruff.lint.mccabe]
max-complexity = 5
