[project]
name = "koda-workspace"
version = "0.1.0"
description = "KODA coding agent"
requires-python = ">=3.13"
dependencies = ["koda", "koda-tui"]

[tool.uv.sources]
koda = { workspace = true }
koda-tui = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit~=4.5.0",
    "pytest~=9.0.1",
    "pytest-cov~=7.0.0",
    "ruff~=0.14.7",
    "ty~=0.0.1a29",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "S",  # flake8-bandit (security rules)
]

[tool.ruff.lint.per-file-ignores]
"*/tests/**/*.py" = ["S101"] # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["koda", "koda_tui"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pytest.ini_options]

testpaths = ["packages/koda/tests", "packages/koda-tui/tests"]
addopts = "--import-mode=importlib --cov=koda --cov=koda-tui  --cov-report=term"
