[project]
name = "koda-workspace"
version = "0.1.0"
description = "KODA coding agent"
requires-python = ">=3.13"
dependencies = ["koda", "koda-tui"]

[tool.uv.sources]
koda = { workspace = true }
koda-tui = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit~=4.5.0",
    "pytest~=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov~=7.0.0",
    "ruff~=0.14.7",
    "ty~=0.0.1a29",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "Q",     # flake8-quotes
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security rules)
    "C4",    # flake8-comprehensions
    "FA",    # flake8-future-annotations
    "UP",    # pyupgrade
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "TC",    # flake8-type-checking
    "PIE",   # flake8-pie (best practices)
    "SIM",   # flake8-simplify
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "FBT",   # flake8-boolean-trap
    "RUF",   # ruff-specific rules
    "COM",   # flake8-commas
    "TRY",   # tryceratops
    "C90",   # mccabe complexity
    "PERF",  # perflint performance rules
    "ASYNC", # flake8-async
]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"*/tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG002",  # Unused arguments in mocks/fixtures matching interfaces
    "S108",    # Temp paths in tests
    "TRY003",  # Long exception messages
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["koda", "koda_tui", "koda_common"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/koda/tests", "packages/koda-tui/tests"]
addopts = "--import-mode=importlib --cov=koda --cov=koda-tui  --cov-report=term"
